leetcode/206_reverse_linked_list/rust/src/tests/snapshots/reverse_linked_list__tests__test_odd_length_list.snap
---
source: src/tests/mod.rs
expression: actual

---
Some(
    ListNode {
        val: 3,
        next: Some(
            ListNode {
                val: 2,
                next: Some(
                    ListNode {
                        val: 1,
                        next: None,
                    },
                ),
            },
        ),
    },
)
