leetcode/206_reverse_linked_list/rust/src/tests/snapshots/reverse_linked_list__tests__test_single_node_list.snap
---
source: src/tests/mod.rs
expression: actual

---
Some(
    ListNode {
        val: 1,
        next: None,
    },
)
